# icon-chooser

./: Cargo.toml
docs/: index.html
docs/assets/dioxus/: dioxus.js  dioxus_bg.wasm
src/: main.rs
