[package]
name = "icon-designer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.1.8", features = ["web"] }
dioxus-heroicons = "0.1.0"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = [
    "Navigator",
    "Clipboard",
    "Window",
] }


[patch.crates-io]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }
